fix rangerpicker render on iphone

--- a/BForms.Docs/Scripts/BForms/Plugins/Datepicker/css/bforms.datepicker.scss
+++ b/BForms.Docs/Scripts/BForms/Plugins/Datepicker/css/bforms.datepicker.scss
@@ -247,20 +247,19 @@ $Black: #424141;
 	width: 642px;
 	border: 1px solid #ccc;
 	background: #fff;
-	padding: 10px 10px 3px;
+	padding: 10px 10px 3px 170px;
 	font-family: Calibri, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	z-index: 9999;
 	.bs-datetime-picker {
 		position: relative;
-		display: inline-block !important;
-		//float: left;
+		float: left;
 		margin-left: 10px;
 	}
-	.ranges {
-		display: inline-block;
+	.ranges {		
 		vertical-align: top;
 		width: 160px;
-		float: left;
+		position: absolute;
+		left: 10px;
 		.btn {
 			padding: 4px 12px;
 			line-height: 1.4;
@@ -543,13 +542,15 @@ $Black: #424141;
 
 @media (max-width: 749px) {
 	.bs-range-picker {
-		max-width: 485px;
-		width: auto;
+		width: 485px;
+		padding: 10px 10px 3px;
 		.ranges {
 			display: block;
 			margin-bottom: 10px;
 			width: 100%;
 			padding: 0 5px;
+			position: relative;
+			left: 0;
 		}
 		.bs-datetime-picker {
 			margin: 0 5px 10px;
@@ -561,12 +562,14 @@ $Black: #424141;
 }
 @media (max-width: 580px) { 
 	.bs-range-picker {
+		width: 242px;
 		&.bs-hide_range{
 			padding-bottom : 0;
 		}
+		.bs-datetime-picker {
+			margin: 5px 0 !important;
+			display: block; 
+		}
 	}
-	.bs-range-picker .bs-datetime-picker  {
-		margin: 5px 0 !important;
-		display: block !important; 
-	}
+	
 }
